@@ -3,8 +3,10 @@ package Data::Login::Role;
 use strict;
 use warnings;
 
+use DateTime;
+use Error::Pure qw(err);
 use Mo qw(build default is);
-use Mo::utils qw(check_bool check_length check_number check_required);
+use Mo::utils qw(check_bool check_isa check_length check_number check_required);
 
 our $VERSION = 0.03;
 
@@ -21,6 +23,14 @@ has role => (
 	is => 'ro',
 );
 
+has valid_from => (
+	is => 'ro',
+);
+
+has valid_to => (
+	is => 'ro',
+);
+
 sub BUILD {
 	my $self = shift;
 
@@ -33,6 +43,20 @@ sub BUILD {
 	# Check role.
 	check_length($self, 'role', '100');
 	check_required($self, 'role');
+
+	# Check valid_from.
+	check_isa($self, 'valid_from', 'DateTime');
+
+	# Check valid_to.
+	check_isa($self, 'valid_to', 'DateTime');
+	if (defined $self->{'valid_to'}
+		&& DateTime->compare($self->{'valid_from'}, $self->{'valid_to'}) != -1) {
+
+		err "Parameter 'valid_to' must be older than 'valid_from' parameter.",
+			'Value', $self->{'valid_to'},
+			'Valid from', $self->{'valid_from'},
+		;
+	}
 
 	return;
 }
@@ -57,6 +81,8 @@ Data::Login::Role - Data object for login role.
  my $action = $obj->action;
  my $id = $obj->id;
  my $role = $obj->role;
+ my $valid_from = $obj->valid_from;
+ my $valid_to = $obj->valid_to;
 
 =head1 METHODS
 
@@ -69,6 +95,8 @@ Constructor.
 =over 8
 
 =item * C<active>
+
+I<It will be removed in near future.>
 
 Active flag.
 It's boolean.
@@ -87,6 +115,21 @@ Role name.
 Maximal length of value is 100 characters.
 It's required.
 
+=item * C<valid_from>
+
+I<It will be required in near future. Optional is because backward
+compatibility.>
+
+Date and time of start of use.
+Must be a L<DateTime> object.
+It's optional.
+
+=item * C<valid_to>
+
+Date and time of end of use. An undefined value means it is in use.
+Must be a L<DateTime> object.
+It's optional.
+
 =back
 
 Returns instance of object.
@@ -94,6 +137,8 @@ Returns instance of object.
 =head2 C<active>
 
  my $active = $obj->active;
+
+I<It will be removed in near future.>
 
 Get active flag.
 
@@ -115,6 +160,22 @@ Get role name.
 
 Returns string.
 
+=head2 C<valid_from>
+
+ my $valid_from = $obj->valid_from;
+
+Get date and time of start of use.
+
+Returns L<DateTime> object.
+
+=head2 C<valid_to>
+
+ my $valid_to = $obj->valid_to;
+
+Get date and time of end of use.
+
+Returns L<DateTime> object or undef.
+
 =head1 ERRORS
 
  new():
@@ -125,6 +186,15 @@ Returns string.
          Parameter 'role' has length greater than '100'.
                  Value: %s
          Parameter 'role' is required.
+         Parameter 'valid_from' must be a 'DateTime' object.
+                 Value: %s
+                 Reference: %s
+         Parameter 'valid_to' must be a 'DateTime' object.
+                 Value: %s
+                 Reference: %s
+         Parameter 'valid_to' must be older than 'valid_from' parameter.
+                 Value: %s
+                 Valid from: %s
 
 =head1 EXAMPLE
 
@@ -136,23 +206,36 @@ Returns string.
  use Data::Login::Role;
 
  my $obj = Data::Login::Role->new(
-         'active' => 1,
          'id' => 2,
          'role' => 'admin',
+         'valid_from' => DateTime->new(
+                 'day' => 1,
+                 'month' => 1,
+                 'year' => 2024,
+         ),
+         'valid_from' => DateTime->new(
+                 'day' => 31,
+                 'month' => 12,
+                 'year' => 2024,
+         ),
  );
 
  # Print out.
- print 'Active flag: '.$obj->active."\n";
  print 'Id: '.$obj->id."\n";
  print 'Role: '.$obj->role."\n";
+ print 'Valid from: '.$obj->valid_from->ymd."\n";
+ print 'Valid to: '.$obj->valid_from->ymd."\n";
 
  # Output:
- # Active flag: 1
  # Id: 2
  # Role: admin
+ # Valid from: 2024-01-01
+ # Valid to: 2024-12-31
 
 =head1 DEPENDENCIES
 
+L<DateTime>,
+L<Error::Pure>,
 L<Mo>,
 L<Mo::utils>.
 
