@@ -2,11 +2,17 @@ use strict;
 use warnings;
 
 use Data::Login::Role;
+use DateTime;
 use Test::More 'tests' => 2;
 use Test::NoWarnings;
 
 # Test.
 my $obj = Data::Login::Role->new(
 	'role' => 'admin',
+	'valid_from' => DateTime->new(
+		'year' => 2024,
+		'month' => 1,
+		'day' => 1,
+	),
 );
 is($obj->role, 'admin', 'Get role (admin).');
